samples/_failures_safe/1761542340_4b5509_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ebd4b33.c: In function ‘main’:
./samples/SAFE/__tmp_9ebd4b33.c:173:5: error: expected declaration or statement at end of input
  173 |     if (edge_count < 0 || edge_count > node_count * node_count) {
      |     ^~
./samples/SAFE/__tmp_9ebd4b33.c:173:5: error: expected declaration or statement at end of input
